--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     "axios": "^1.6.7",
     "bcrypt": "^5.1.1",
     "formik": "^2.4.5",
+    "html2canvas": "^1.4.1",
+    "jspdf": "^2.5.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-lottie": "^1.2.4",
